Agregado el dropdown con la opcion de tema en header

--- a/frontend/components/header.html
+++ b/frontend/components/header.html
@@ -7,6 +7,12 @@
             <a href="https://www.mep.go.cr/contacto">Contacto</a>
             <a href="https://outlook.office365.com/mail/" target="_blank">Correo institucional ↗</a>
             <a href="https://dgthenlinea.mep.go.cr/" target="_blank">DGTH en línea ↗</a>
+            <!-- <label for="theme">Tema del sitio</label> -->
+            <select name="tema" id="tema">
+                <option value="light">Claro</option>
+                <option value="dark">Oscuro</option>
+                <option value="contrast">Alto Contraste</option>
+            </select>
         </nav>
     </div>
 
@@ -26,6 +32,6 @@
                 <a href="https://www.mep.go.cr/oferta-educativa" class="nav-btn">Oferta educativa</a>
             </nav>
         </div>
-
+        
     </div>
 </header>
